# meandra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENTS.md  NOTES.md  README.md  environment.yml  meandra.code-workspace  pyproject.toml
.github/workflows/: ci.yml  publish-noarch.yml
archive/2025-06-01_readme/: ARCHIVE_LOG.md  README.md
conda.recipe/: meta.yaml
config/dictionaries/: meandra.txt  project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md  index.rst
docs/adr/: 1-unpacking-input-conf.md  2-input-output-format.md  3-workflow-responsibility.md  4-workflow-creation.md  5-sweeping-parameters.md  XXXX-template.md  XXXX-unpacking-input-conf.md
docs/api/: core.md  core.rst  datastore.md  datastore.rst  index.md  index.rst  monitoring.md  monitoring.rst  orchestration.md  orchestration.rst
docs/architecture/: index.rst  overview.md  overview.rst  patterns.md  patterns.rst
docs/guide/: cli-reference.md  concepts.md  concepts.rst  configuration.md  installation.md  quickstart.md  quickstart.rst  tutorials.md  tutorials.rst  usage.md
docs/internals/: index.md  overview.md  patterns.md
examples/: __init__.py  advanced_pipeline.py  config.json  configurable_pipeline.py  fluent_api_example.py  simple_pipeline.py
src/meandra/: __init__.py  __main__.py  __version__.py  api.py  cli.py  cli_app.py
src/meandra/api/: __init__.py  decorators.py  fluent.py
src/meandra/checkpoint/: __init__.py  manager.py  storage.py
src/meandra/cli/: __init__.py  mod.py
src/meandra/configuration/: __init__.py  mod.py
src/meandra/core/: __init__.py  errors.py  graph.py  node.py  parameters.py  pipeline.py  workflow.py
src/meandra/datastore/: __init__.py  catalog.py  io_handlers.py
src/meandra/integration/: __init__.py  data.py  protocols.py  tessara.py
src/meandra/logging/: __init__.py  config.py  context.py
src/meandra/monitoring/: __init__.py  progress.py  retry.py  state_tracker.py
src/meandra/orchestration/: __init__.py  mod.py  orchestrator.py
src/meandra/scheduling/: __init__.py  scheduler.py
src/meandra/utils/: __init__.py  mod.py  typing.py
tests/test_meandra/: __init__.py  test_architecture_fixes.py  test_catalog.py  test_checkpoint.py  test_orchestration.py  test_state_tracker.py
tests/test_meandra/test_api/: __init__.py  test_decorators.py  test_fluent.py
tests/test_meandra/test_core/: __init__.py  test_errors.py  test_workflow.py
tests/test_meandra/test_integration/: __init__.py  test_data_integration.py  test_tessara_integration.py
tests/test_meandra/test_monitoring/: __init__.py  test_progress.py  test_retry.py
tests/test_meandra/test_utils/: __init__.py  test_typing.py
