# ==================================================================================================
# Pyproject Configuration for the Meandra Package
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "meandra"
version = "0.0.0"
authors = [{name = "Esther Poniatowski", email = "esther.poniatowski@ens.psl.eu"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Workflow orchestration library for modular data analysis pipelines"
keywords = ["workflow-orchestration", "pipeline-orchestration", "data-pipelines", "modular-design"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/esther-poniatowski/meandra"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [
    "omegaconf",         # Configuration management
    "pyyaml",            # YAML configuration parsing
    "typer",             # CLI interface
    "rich",              # Improved CLI output formatting
    "numpy>=1.24",       # Array operations for handlers
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "black",
    "pylint",
    "types-PyYAML",
    "sphinx",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
hdf5 = [
    "h5py>=3.0",         # HDF5 file support
]
morpha = [
    "morpha",            # DataStructure I/O integration
]
tessara = [
    "tessara",           # Parameter sweep integration
]
integration = [
    "morpha",            # DataStructure I/O integration
    "tessara",           # Parameter sweep integration
]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
meandra = "meandra.cli_app:app"


# --- Tool Configurations --------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

